# rade-engine

./: .cursorrules  .env.example  .gitignore  .tool-versions  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  PRD.md  RADE.md  RADE2.0.md  RADE_V1.5.4_AWWAWARDS_TOKEN_PULSE_COMPUTED_MANIFEST_1000N.figma_bridge_v0_manifest.json  RADE_V1.5.4_AWWAWARDS_TOKEN_PULSE_COMPUTED_MANIFEST_256N.figma_bridge_v0_manifest.json  README.md  README.txt  SECURITY.md  action.yml  pyproject.toml  rade-devserver  rade-proof  requirements.txt  sitecustomize.py  vercel.json
.cursor/: rules.md
.github/: CODEOWNERS  FUNDING.yml  pull_request_template.md
agent/: __init__.py  cli.py
cloud/: .env.example  LICENSE  README.md  app-manifest.json  requirements.txt  vercel.json
docs/: APP_SCOPE.md  ARCHITECTURE.md  BLUEPRINT_GUIDE.md  BUILD_SHEET.md  CURSOR_RULES.md  DATA_CONTRACT.md  DECISIONS.md  HARD_RISKS.md  LAUNCH_POST.md  MVP_REPORT_SPEC.md  NEXT_EXECUTION_BACKLOG.md  OBSERVABILITY_CONTRACT.md  OPEN_SOURCE_ADOPTION_BACKLOG.md  PHASE_1_COMPONENTIZATION.md  PR_WORKFLOW.md  QUEUE_WORKER_BOUNDARY.md  RECOMMENDATION_ENGINE.md  REPO_CONNECTOR_SPEC.md  SCORING_MODEL.md  SECURITY_BASELINE.md  STANDARDS_PACK.md  TRUTH_HIERARCHY.md
examples/: legacy_repair_after.json  legacy_repair_after_report.json  legacy_repair_after_report.md  legacy_repair_before_report.json  legacy_repair_before_report.md  legacy_repair_same_surface_report_diff.json  legacy_repair_same_surface_report_diff.md  mdn_homepage.json  mdn_homepage_report.json  mdn_homepage_report.md  python_org_homepage.json  python_org_homepage_accessibility_risk.shields.json  python_org_homepage_complexity.shields.json  python_org_homepage_migration_risk.shields.json  python_org_homepage_report.html  python_org_homepage_report.json  python_org_homepage_report.md  python_org_homepage_reusability.shields.json  python_to_web_dev_report_diff.json  python_to_web_dev_report_diff.md  sample_ios_output.json  web_dev_homepage.json  web_dev_homepage_report.json  web_dev_homepage_report.md
scripts/: pr_score_comment.py  vercel-dev
src/: __init__.py
tests/: __init__.py  helpers.py  runner.py  test_api_auth.py  test_api_contract.py  test_api_smoke.py  test_axe_adapter.py  test_axe_gate_fixtures.py  test_badge.py  test_cli_contract.py  test_cloud_analyze.py  test_cloud_webhook.py  test_deduplicator.py  test_demo_runner.py  test_edge_shield.py  test_figma_bridge_v0.py  test_fingerprint.py  test_github_action_contract.py  test_graph_ingestor.py  test_html_report.py  test_impact_engine.py  test_layering.py  test_neo4j_optional.py  test_normalizer.py  test_pr_engine.py  test_pr_score_diff.py  test_rade_orchestrator.py  test_real_world_fixtures.py  test_recommendation_engine.py  test_recursive_safety.py  test_repo_connector.py  test_repo_contracts.py  test_report_diff.py  test_report_generator.py  test_roadmap_generator.py  test_schemas.py  test_scoring.py  test_scrubber.py  test_slab03_hybrid_anchor.py  test_slab03_naming.py  (+3 more)
tmp_contract_update/: report.json  report.md
web/: package.json
(+98 files in other folders)
