[project]
name = "rade"
version = "0.1.0"
description = "RADE bootstrap workspace"
readme = "README.md"
requires-python = "==3.14.3"
dependencies = [
    "neo4j>=6.1.0",
]

[dependency-groups]
dev = [
    "black",
    "ruff",
    "pytest",
]

[tool.black]
line-length = 88
target-version = ["py314"]

[tool.ruff]
line-length = 88
target-version = "py314"
src = ["src", "tests", "agent"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.uv]
package = false
