[project]
name = "rade"
version = "0.1.0"
description = "Deterministic UI intelligence engine for repeated structure, accessibility gaps, and modernization risk"
readme = "README.md"
license = { text = "AGPL-3.0-only" }
requires-python = "==3.14.3"
dependencies = [
    "neo4j>=6.1.0",
    "playwright>=1.54.0",
    "PyYAML>=6.0.2",
]

[dependency-groups]
dev = [
    "black",
    "ruff",
    "pytest",
]

[tool.black]
line-length = 88
target-version = ["py314"]

[tool.ruff]
line-length = 88
target-version = "py314"
src = ["src", "tests", "agent"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.uv]
package = false
